--- a/src/components/aboutus/about.css
+++ b/src/components/aboutus/about.css
@@ -11,17 +11,18 @@
 }
 .about-img{
     position: relative;
+    width: 500px;
 }
 .about-img :nth-child(1){
-    width: 500px;
-    height: 300px;
+    width: 100%;
+    height: 400px;
     border-radius: 10px;
 }
 .about-img :nth-child(2){
     position: absolute;
-    top: -60px;
-    left: 60%;
-    width: 250px;
+    top: -10%;
+    left: 75%;
+    width: 200px;
     height: 200px;
     border-radius: 10px;
 }
@@ -32,5 +33,15 @@
     }
     .about-copy{
        margin-bottom: 40px;
+    }
+    .about-img :nth-child(1){
+        height: 300px;
+    }
+    .about-img{
+        width: 400px;
+    }
+    .about-img :nth-child(2){
+        top: -15%;
+        left: 62%;
     }
 }
