--- a/src/components/join/join.css
+++ b/src/components/join/join.css
@@ -13,8 +13,8 @@
     padding: 0;
 }
 .jvideo video{
-    width: 500px;
-    height: 400px;
+    width: 95%;
+    height: 80%;
     border-radius: 25px;
 }
 .playbtn{
